--- a/src/pages/signup/SignupForm.css
+++ b/src/pages/signup/SignupForm.css
@@ -1,18 +1,19 @@
 .login-container {
-    height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
-    background-color: #03050c;
+    align-items: center;
+    height: 90vh;
+    background-color: #2b2d34;
+    margin: 4rem 0;
+    width: 60% !important;
 }
 
 .auth-form {
-    width: 100%;
-    max-width: 30rem;
+    width: 65%;
     padding: 2rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
-    background-color: #03050c;
+    /* margin-right: 14rem */
 }
 
 .auth-form h2 {
