--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
     line-height: 1.5;
     font-weight: 400;
 
-    color: white;
-    background-color: #03050c;
+    color: #ffffff;
+    background-color: #2b2d34;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -13,8 +13,8 @@
 }
 
 body {
-    background-color: #03050c;
-    color: aliceblue;
+    background-color: #2b2d34;
+    color: #ffffff;
 }
 
 * {
