--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
     font-weight: 400;
 
     color: #ffffff;
-    background-color: #2b2d34;
+    background-color: #063970;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-color: #2b2d34;
+    background-color:#063970;
     color: #ffffff;
 }
 
