--- a/src/pages/AuthForm.css
+++ b/src/pages/AuthForm.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 90vh;
-    background-color: #2b2d34;
+    background-color: #063970;
     margin: 4rem 0;
     width: 60%;
 }
@@ -13,6 +13,7 @@
     padding: 2rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
+    background-color: #154c79;
     /* margin-right: 14rem */
 }
 
